--- a/src/main/webapp/many2many/AForm.html
+++ b/src/main/webapp/many2many/AForm.html
@@ -24,7 +24,7 @@
     <div jwcid="@contrib:TableView" element="span" columns="name,!DeleteRelative"
      source="ognl:getSource('bs')" pageSize="5" persist="client">
    <fieldset>
-   <legend>A-B many-to-many,A关联的B列表 <a parameters="ognl:{entity,'many2many/BSelectionList'}" listener="listener:doNewRelativeEntityAction" jwcid="@DirectLink" href="BForm.html">Add A to B</a></legend> 
+   <legend>A-B many-to-many,A关联的B列表 <a parameters="ognl:{entity,'many2many/BSelectionList'}" listener="listener:doNewRelativeAction" jwcid="@DirectLink" href="BForm.html">Add A to B</a></legend> 
    
 	<table width="100%" align="center" border="1">
 		<tr>
