--- a/src/main/webapp/one2many/AForm.html
+++ b/src/main/webapp/one2many/AForm.html
@@ -25,7 +25,7 @@
     <div jwcid="@contrib:TableView" element="span" columns="name,!EditRelative,!DeleteRelative"
      source="ognl:getSource('bs')" pageSize="5" persist="client">
    <fieldset>
-   <legend>A-B one-to-many,A关联的B列表 <a parameters="ognl:{entity,'one2many/BForm'}" listener="listener:doNewRelativeEntityAction" jwcid="@DirectLink" href="BForm.html">Add A to B</a></legend> 
+   <legend>A-B one-to-many,A关联的B列表 <a parameters="ognl:{entity,'one2many/BForm'}" listener="listener:doNewRelativeAction" jwcid="@DirectLink" href="BForm.html">Add A to B</a></legend> 
    
 	<table width="100%" align="center" border="1">
 		<tr>
