--- a/src/main/webapp/one2many/BForm.html
+++ b/src/main/webapp/one2many/BForm.html
@@ -18,7 +18,7 @@
         </tr>
       </table>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
-      <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:this.form.events.cancel();"/>
+      <input jwcid="@Any" type="Button" value="message:button.Cancel" onClick="javascript:this.form.events.cancel();"/>
     </form>
     <br/>
   </body>
