--- a/src/main/webapp/many2many/BForm.html
+++ b/src/main/webapp/many2many/BForm.html
@@ -24,7 +24,7 @@
     <div jwcid="@contrib:TableView" element="span" columns="name,!DeleteRelative"
      source="ognl:getSource('as')" pageSize="5" persist="client">
    <fieldset>
-   <legend>B-A many-to-many,B关联的A列表 <a parameters="ognl:{entity,'many2many/ASelectionList'}" listener="listener:doNewRelativeAction" jwcid="@DirectLink" href="BForm.html">Add B to A</a></legend> 
+   <legend>B-A many-to-many,B关联的A列表 <a parameters="ognl:{entity,'many2many/BAList'}" listener="listener:doNewRelativeAction" jwcid="@DirectLink" href="BForm.html">Add B to A</a></legend> 
    
 	<table width="100%" align="center" border="1">
 		<tr>
