--- a/src/main/webapp/selenium/TestSuite.html
+++ b/src/main/webapp/selenium/TestSuite.html
@@ -50,10 +50,7 @@ http-equiv="content-type">
         <tbody>
             <tr><td><b>Test Suite</b></td></tr>
 
-            <tr><td><a href="tests/TestUserEntitySingleActions.html">TestUserEntitySingleActions.html</a></td></tr>
-			<tr><td><a href="tests/TestOne2ManyActions.html">TestOne2ManyActions.html</a></td></tr>
-			<tr><td><a href="tests/TestOne2OneActions.html">TestOne2OneActions.html</a></td></tr>
-			<tr><td><a href="tests/TestMany2ManyActions.html">TestMany2ManyActions.html</a></td></tr>
+            <tr><td><a href="tests/TestOne.html">TestOne</a></td></tr>
         </tbody>
     </table>
 
