--- a/src/main/webapp/selenium/tests/TestOne.html
+++ b/src/main/webapp/selenium/tests/TestOne.html
@@ -1,42 +1,32 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>test</title>
+<title>TestOne</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">test</td></tr>
+<tr><td rowspan="1" colspan="3">TestOne</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/BlogList.page</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Home Page</td>
+	<td>/app</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=add</td>
+	<td>link=[ONE]</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>Add Entity</td>
+	<td>clickAndWait</td>
+	<td>link=[LINK.ADD]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>blogTitleField</td>
+	<td>nameField</td>
 	<td>test</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>blogContentField</td>
-	<td>asdf</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -44,23 +34,33 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
-	<td></td>
+	<td>verifyTextPresent</td>
 	<td>test</td>
-</tr>
-<tr>
-	<td>assertTitle</td>
-	<td>Home Page</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Delete</td>
+	<td>link=[LINK.EDIT]</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertTitle</td>
-	<td>Home Page</td>
+	<td>type</td>
+	<td>nameField</td>
+	<td>test2</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>Submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>test2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=[LINK.DELETE]</td>
 	<td></td>
 </tr>
 
