增加了流程测试one,one2many,many2many的测试脚本
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1368 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many/AList.html
+++ b/src/main/webapp/many2many/AList.html
@@ -8,7 +8,7 @@
     <center>
       <a listener="listener:doNewEntityAction" jwcid="@DirectLink" href="AForm.html">
         <span key="link.add">add</span>
-      </a>
+      </a>&nbsp;&nbsp;<a href="#" jwcid="@PageLink" page="many2many/BList"><span>Goto BList</span></a>
     </center>
     <div jwcid="@contrib:TableView" columns="shortName" element="div" source="ognl:source" persist="client">
       <table>
