--- a/src/main/webapp/many2many/BList.html
+++ b/src/main/webapp/many2many/BList.html
@@ -8,7 +8,7 @@
     <center>
       <a listener="listener:doNewEntityAction" jwcid="@DirectLink" href="BForm.html">
         <span key="link.add">add</span>
-      </a>
+      </a>&nbsp;&nbsp;<a href="#" jwcid="@PageLink" page="many2many/AList"><span>Goto AList</span></a>
     </center>
     <div jwcid="@contrib:TableView" columns="shortName" element="div" source="ognl:source" persist="client">
       <table>
