--- a/src/main/webapp/selenium/TestSuite.html
+++ b/src/main/webapp/selenium/TestSuite.html
@@ -51,6 +51,9 @@ http-equiv="content-type">
             <tr><td><b>Test Suite</b></td></tr>
 
             <tr><td><a href="tests/TestOne.html">TestOne</a></td></tr>
+			<tr><td><a href="tests/TestOneActions.html">TestOneActions</a></td></tr>
+			<tr><td><a href="tests/TestOne2ManyActions.html">TestOne2ManyActions</a></td></tr>
+			<tr><td><a href="tests/TestMany2ManyActions.html">TestMany2ManyActions</a></td></tr>
         </tbody>
     </table>
 
