加入numberPattern validator,同时增加了样例程序
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1427 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -13,7 +13,7 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" id="name" name="name"/>
+            <input jwcid="nameField" id="name" name="name"/><input jwcid="numField"/>
           </td>
         </tr>
       </table>
