git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1432 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -1,9 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<html>
-  <head>
-    <title>test</title>
-  </head>
+<span jwcid="@DemoBorder">
   <body jwcid="@Body">
     <a listener="listener:doCancelEntityAction" jwcid="@DirectLink" href="AList.html">Return A List</a>
     <form jwcid="AForm" action="AList.html">
@@ -22,4 +17,4 @@
     </form>
     <br/>
   </body>
-</html>
+</span>
