增加状态bean。以及删除过期的api
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1437 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -7,7 +7,7 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" id="name" name="name"/><input jwcid="numField"/>
+            <input jwcid="nameField" /><input jwcid="passwordField"/>
           </td>
         </tr>
       </table>
