向2.1迈进，采用tapestry4.1.1
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1477 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many/AList.html
+++ b/src/main/webapp/many2many/AList.html
@@ -1,10 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<html>
-  <head>
-    <title>test</title>
-  </head>
-  <body>
+<span jwcid="@DemoBorder">
     <center>
       <a listener="listener:doNewEntityAction" jwcid="@DirectLink" href="AForm.html">
         <span key="link.add">add</span>
@@ -41,5 +35,4 @@
       </table>
       <div jwcid="@contrib:TablePages" element="div"/>
     </div>
-  </body>
-</html>
+</span>
