--- a/src/main/webapp/many2many/BAList.html
+++ b/src/main/webapp/many2many/BAList.html
@@ -1,5 +1,4 @@
-<html>
-<body jwcid="@Body">
+<span jwcid="@DemoBorder">
 <form jwcid="BAForm">
 	<div jwcid="@contrib:TableView" columns="!checkbox,name" element="div"
         persist="client" source="ognl:source" pageSize="5">
@@ -20,5 +19,4 @@
 		</table>
 	</div>
 	</form>
-</body>
-</html>
+</span>
