--- a/src/main/webapp/one/AList.html
+++ b/src/main/webapp/one/AList.html
@@ -1,10 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<html>
-  <head>
-    <title>test</title>
-  </head>
-  <body>
+<span jwcid="@DemoBorder">
     <center>
       <a listener="listener:doNewEntityAction" jwcid="@DirectLink" href="AForm.html">
         <span key="link.add">add</span>
@@ -41,5 +35,4 @@
       </table>
       <div jwcid="@contrib:TablePages" element="div"/>
     </div>
-  </body>
-</html>
+</span>
