--- a/src/main/webapp/one2many/AForm.html
+++ b/src/main/webapp/one2many/AForm.html
@@ -1,10 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<html>
-  <head>
-    <title>test</title>
-  </head>
-  <body jwcid="@Body">
+<span jwcid="@DemoBorder">
     <a listener="listener:doCancelEntityAction" jwcid="@DirectLink" href="AList.html">Return A List</a>
     <form jwcid="AForm" action="AList.html">
       <table>
@@ -18,7 +12,7 @@
         </tr>
       </table>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
-      <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:this.form.events.cancel();"/>
+      <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>
     </form>
     <br/>
     
@@ -40,5 +34,4 @@
 	</table>
     </fieldset>
 </div>
-  </body>
-</html>
+</span>
