RelfectRelativeEntityListPage类中增加了 doViewRelativeEntityListAction方法，用于在多个RelfectRelativeEntityListPage 中进行跳转
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1487 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one2many2/BList.html
+++ b/src/main/webapp/one2many2/BList.html
@@ -6,7 +6,7 @@
       <a listener="listener:doReturnRootedFormAction" jwcid="@DirectLink" href="AForm.html">
 		返回
       </a>
-      
+      <a jwcid="@DirectLink" listener="listener:doViewRelativeEntityListAction" parameters="ognl:{rootedObject,'one2many2/BList'}">返回B列表</a>
     </center>
     <div jwcid="@contrib:TableView" columns="shortName" element="div" source="ognl:getSource('bs')" persist="client">
       <table>
