加入vector向量类型，同时完成vector的translator
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1502 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.html
+++ b/src/main/webapp/one/AForm.html
@@ -7,7 +7,7 @@
             <span key="name">name</span>
           </td>
           <td>
-            <input jwcid="nameField" /><input jwcid="passwordField"/>
+            <input jwcid="nameField" /><input jwcid="passwordField"/>colors:<input jwcid="colorsField"/>
           </td>
         </tr>
       </table>
