--- a/src/main/webapp/one/AList.html
+++ b/src/main/webapp/one/AList.html
@@ -11,6 +11,9 @@
             <span key="name">name</span>
           </td>
           <td>
+            <span key="colors">colors</span>
+          </td>
+          <td>
             <span key="link.edit">edit</span>
           </td>
           <td>
@@ -20,6 +23,9 @@
         <tr row="ognl:entity" jwcid="@contrib:TableRows" element="tr">
           <td>
             <span jwcid="@Insert" value="ognl:entity.name">name</span>
+          </td>
+          <td>
+            <span jwcid="@Insert" value="ognl:entity.colors">colors</span>
           </td>
           <td>
             <a parameters="ognl:entity" listener="listener:doEditEntityAction" jwcid="@DirectLink" href="AForm.html" id="editAction">
