完成了从A实体增加AB(中间实体)的操作
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1570 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -4,6 +4,9 @@
 		<a jwcid="@PageLink" page="one/AList"><span key="one" /></a><br>
 		<a jwcid="@PageLink" page="one2many/AList"><span key="one2many" /></a><br>
         <a jwcid="@PageLink" page="many2many/AList"><span key="many2many-user" /></a><br>
-		<a jwcid="@PageLink" page="many2many/BList"><span key="many2many-catalog" /></a>
+		<a jwcid="@PageLink" page="many2many/BList"><span key="many2many-catalog" /></a><br>
+		<hr>
+		<a jwcid="@PageLink" page="many2many2/AList"><span key="many2many2-user" /></a><br>
+		<a jwcid="@PageLink" page="many2many2/BList"><span key="many2many2-catalog" /></a><br>			
     </body>
 </html>
