完成了从B实体，到AB中间实体的操作
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1571 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/AForm.html
+++ b/src/main/webapp/many2many2/AForm.html
@@ -18,7 +18,7 @@
     <div jwcid="@contrib:TableView" element="span" columns="name,message,!DeleteRelative"
      source="ognl:getSource('abs')" pageSize="5" persist="client">
    <fieldset>
-   <legend>A-B many-to-many,AB为中间表，并且其中含有数据,此处跳转的ABList <a parameters="ognl:{entity,'many2many2/ABList'}" listener="listener:doViewRelativeEntityListAction" jwcid="@DirectLink" href="BForm.html">Add AB</a></legend> 
+   <legend>A-B many-to-many,AB为中间表，并且其中含有数据,此处跳转的ABList <a parameters="ognl:{entity,'many2many2/ABList'}" listener="listener:doViewRelativeEntityListAction" jwcid="@DirectLink" href="ABList.html">Add AB</a></legend> 
    
 	<table width="100%" align="center" border="1">
 		<tr>
