修改，从ABForm页面之后保存跳转到ABList页面， 并在ABList页面增加了返回AForm页面以及在BAList页面返回BForm页面的方法
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1573 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BAList.html
+++ b/src/main/webapp/many2many2/BAList.html
@@ -3,6 +3,9 @@
         persist="client" source="ognl:getSource('abs')" pageSize="5">
 		<table width="200" border="1" align="center">
 		  <tr>
+			  <td colspan="4" align="right"><a href="BForm.html" jwcid="@DirectLink" listener="listener:goRootFormPage">返回AForm</a></td>
+		  </tr>
+		  <tr>
 			  <td colspan="4" align="right"><a href="#" jwcid="@DirectLink" listener="listener:doNewEntityAction">New</a></td>
 		  </tr>
 		  <tr>
