--- a/src/main/webapp/one/AList.html
+++ b/src/main/webapp/one/AList.html
@@ -4,11 +4,20 @@
         <span key="link.add">add</span>
       </a>
     </center>
+	<center>
+		<form jwcid="AQueryForm">
+			name:<input jwcid="nameField"/>
+			<input type="submit"/>
+		</form>
+	</center>
     <div jwcid="@contrib:TableView" columns="shortName" element="div" source="ognl:source" persist="client">
       <table>
         <tr>
           <td>
             <span key="name">name</span>
+          </td>
+          <td>
+            <span key="password">password</span>
           </td>
           <td>
             <span key="colors">colors</span>
@@ -23,6 +32,9 @@
         <tr row="ognl:entity" jwcid="@contrib:TableRows" element="tr">
           <td>
             <span jwcid="@Insert" value="ognl:entity.name">name</span>
+          </td>
+          <td>
+            <span jwcid="@Insert" value="ognl:entity.password">password</span>
           </td>
           <td>
             <span jwcid="@Insert" value="ognl:entity.colors">colors</span>
