基本完成了TextAreaBox组件从DB中读取数据，现实下拉菜单的功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1588 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BForm.html
+++ b/src/main/webapp/many2many2/BForm.html
@@ -10,6 +10,14 @@
             <input jwcid="nameField" id="name" name="name"/>
           </td>
         </tr>
+        <tr>
+          <td>
+            <span key="cnName">cnName</span>
+          </td>
+          <td>
+            <input jwcid="cnNameField" id="cnName" name="cnName"/>
+          </td>
+        </tr>
       </table>
       <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
       <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>
