修正中间表，支持查询
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1624 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/ABList.html
+++ b/src/main/webapp/many2many2/ABList.html
@@ -1,4 +1,10 @@
 <span jwcid="@DemoBorder">
+	<center>
+		<form jwcid="ABQueryForm">
+			name:<input jwcid="messageField"/>
+			<input type="submit"/>
+		</form>
+	</center>
 	<div jwcid="@contrib:TableView" columns="name,message,!edit,!delete" element="div"
         persist="client" source="ognl:getSource('abs')" pageSize="5">
 		<table width="200" border="1" align="center">
