统一了TextAreaBox和CornerSelect使用的Model
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1633 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BForm.html
+++ b/src/main/webapp/many2many2/BForm.html
@@ -34,7 +34,7 @@
 		</tr>
 		<tr jwcid="@contrib:TableRows" element="tr" row="ognl:relativeObject">
 			<td><span jwcid="@Insert" value="ognl:relativeObject.name" /></td>
-			<td><span jwcid="@Insert" value="ognl:relativeObject.message" /></td>
+			<td><span jwcid="@Insert" value="ognl:relativeObject.a.cnName" /></td>
 			<td><a href="#" jwcid="@DirectLink" parameters="ognl:relativeObject" listener="listener:doDeleteRelativeEntityAction">doDeleteRelativeEntityAction</a></td>
 		</tr>
 		
