--- a/src/main/webapp/many2many2/AForm.html
+++ b/src/main/webapp/many2many2/AForm.html
@@ -34,7 +34,7 @@
 		</tr>
 		<tr jwcid="@contrib:TableRows" element="tr" row="ognl:relativeObject">
 			<td><span jwcid="@Insert" value="ognl:relativeObject.name" /></td>
-			<td><span jwcid="@Insert" value="ognl:relativeObject.message" /></td>
+			<td><span jwcid="@Insert" value="ognl:relativeObject.a.cnName" /></td>
 			<td><a href="#" jwcid="@DirectLink" parameters="ognl:relativeObject" listener="listener:doDeleteRelativeEntityAction">doDeleteRelativeEntityAction</a></td>
 		</tr>
 		
