修正了ie中显示位置不正确bug
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1643 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BAForm.html
+++ b/src/main/webapp/many2many2/BAForm.html
@@ -1,3 +1,12 @@
+<style>
+	.right-td-width-bg,.right-td-width,.right-td-width-readonly{
+	color: #000066;
+	background-color: #ffffff;
+	width: 35%;
+	line-height: 22px;
+	text-align: center;
+}
+</style>
 <span jwcid="@DemoBorder">
 	<div jwcid="@contrib:TableView" columns="name" element="div"
         persist="client:page" source="ognl:source" pageSize="5">
@@ -30,7 +39,7 @@
 		  <td>
 		  	message
 		  </td>
-          <td align="center">
+          <td class="right-td-width">
             <input jwcid="messageField" id="message" name="message"/>
           </td>
         </tr>
