--- a/src/test/resources/corner/widget/test_TextAreaBox.html
+++ b/src/test/resources/corner/widget/test_TextAreaBox.html
@@ -29,17 +29,32 @@ djConfig = { isDebug: true
 	.input-form-99{
 		width: 99%;
 	}
+.right-td-width-bg,.right-td-width,.right-td-width-readonly{
+	color: #000066;
+	background-color: #ffffff;
+	width: 35%;
+	line-height: 22px;
+	text-align: center;
+}
+
+.wrapper{
+	text-align:left;
+}
 </style>
 </head>
 
 <body>
-	<input id="tab"  class="input-form-ajax-99"></input>
-	<input id="tab1"  class="input-form-ajax-99"></input>
+<table><tr><td class="right-td-width"><input id="tab"  class="right-td-width"></input></td></tr></table>	
+	<input id="tab1"  class="right-td-width"></input>
 </body>
 		<script language="javascript">
 			var props = {dataUrl:"TextAreaBoxData.js"};
 			dojo.widget.createWidget("TextAreaBox",props,dojo.byId("tab"));
-			dojo.widget.createWidget("Select",props,dojo.byId("tab1"));
+			var s=dojo.widget.createWidget("Select",props,dojo.byId("tab1"));
+//			dojo.debug(s["optionsListWrapper"].style["text-align"]="left");
+			s["optionsListWrapper"].style.textAlign ="left";
+			//dojo.style.setStyleAttributes(s["optionsListWrapper"],"text-align","center");
+			
 			//dojo.debug(dojo.widget.Select);
 			//dojo.debug(corner.widget.TextAreaBox);			
 		</script>
