--- a/src/main/webapp/many2many2/ABForm.html
+++ b/src/main/webapp/many2many2/ABForm.html
@@ -1,3 +1,15 @@
+<style>
+.right-td-width-bg,.right-td-width,.right-td-width-readonly{
+	color: #000066;
+	background-color: #ffffff;
+	width: 35%;
+	line-height: 22px;
+	text-align: center;
+}
+.dojoComboBoxOptions{
+	position: relative;
+}
+</style>
 <span jwcid="@DemoBorder">
 	<div jwcid="@contrib:TableView" columns="name" element="div"
         persist="client:page" source="ognl:source" pageSize="5">
@@ -30,7 +42,7 @@
 		  <td>
 		  	message
 		  </td>
-          <td align="center">
+          <td align="center" class="right-td-width">
             <input jwcid="messageField" id="message" name="message"/>
           </td>
         </tr>
