--- a/src/test/resources/corner/widget/test_Matrix.html
+++ b/src/test/resources/corner/widget/test_Matrix.html
@@ -32,6 +32,16 @@ dojo.addOnLoad(function(){
 </script>
 </HEAD>
 <BODY>
+<p>
+    <pre>
+对二维表展现的测试，下面可以动态的增加行和列，上面的TextArea为对应的值.
+下面的一行对应数据库的是一条记录。目前记录这些值采用一个字段，存储的类型为向量(java.util.Vector).
+
+TODO:
+    在增加的时候可以支持拖拽(DND)。    
+    
+    </pre>
+</p>
 <div id="testMatrix" ></div>
 </body>
 </html>
