git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1665 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_Matrix.html
+++ b/src/test/resources/corner/widget/test_Matrix.html
@@ -39,9 +39,12 @@ dojo.addOnLoad(function(){
 
 TODO:
     在增加的时候可以支持拖拽(DND)。    
-    
     </pre>
 </p>
 <div id="testMatrix" ></div>
+last change:	date:       $Date: 2006-08-26 11:54:07Z $
+           	by:         $Author: jcai $
+           	revision:   $Revision: 1544 $  
+
 </body>
 </html>
