--- a/src/test/resources/corner/widget/test_Matrix.html
+++ b/src/test/resources/corner/widget/test_Matrix.html
@@ -42,9 +42,10 @@ TODO:
     </pre>
 </p>
 <div id="testMatrix" ></div>
-last change:	date:       $Date: 2006-08-26 11:54:07Z $
-           	by:         $Author: jcai $
-           	revision:   $Revision: 1544 $  
-
+<pre>
+last change:	date:       $Date$
+           	by:         $Author$
+           	revision:   $Revision$  
+</pre>
 </body>
 </html>
