--- a/src/test/resources/corner/widget/test_QueryBox.html
+++ b/src/test/resources/corner/widget/test_QueryBox.html
@@ -35,12 +35,10 @@ dojo.addOnLoad(function(){
 <pre>
 对选择的时候，支持查询的widget。
 在查询的时候,支持弹出层的页面跳转，以及对查询页面的缓存.
+TODO:
+    增强美观
 </pre>
 <input id="testQ" ></div>
-<pre>
-last change:	date:       $Date: 2006-09-08 02:49:21Z $
-           	by:         $Author: jcai $
-           	revision:   $Revision$  
-</pre>
+$Id$
 </body>
 </html>
