增加了piano-core中，实际使用的style做测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1673 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/ABForm.html
+++ b/src/main/webapp/many2many2/ABForm.html
@@ -31,7 +31,9 @@
 	width: 98%;
 }
 /* 当两列时Input的颜色、背景色、宽度、行高及字体大小、颜色 */
-.input-form-99{
+	
+	.input-form-ajax-99 {
+	background-color: #F7EFFF;
 	width: 99%;
 }
 </style>
@@ -68,7 +70,7 @@
 		  	message
 		  </td>
           <td align="center" class="right-td-width">
-            <input class="input-form-99" jwcid="messageField" id="message" name="message"/>
+            <input class="input-form-ajax-99" jwcid="messageField" id="message" name="message"/>
           </td>
         </tr>
 		<tr>
