--- a/src/main/webapp/many2many2/BAForm.html
+++ b/src/main/webapp/many2many2/BAForm.html
@@ -34,6 +34,10 @@
 .input-form-99{
 	width: 99%;
 }
+/* 采用ajax的Input的颜色、背景色、宽度、行高及字体大小、颜色 */
+.input-form-ajax {
+	background-color: #F7EFFF;
+}
 </style>
 <span jwcid="@DemoBorder">
 	<div jwcid="@contrib:TableView" columns="name" element="div"
@@ -68,7 +72,7 @@
 		  	message
 		  </td>
           <td class="right-td-width">
-            <input  class="input-form-99" jwcid="messageField" name="message"/>
+            <input  class="input-form-ajax" jwcid="messageField" name="message"/>
           </td>
         </tr>
 		<tr>
