加入对注释
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1674 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_Matrix.html
+++ b/src/test/resources/corner/widget/test_Matrix.html
@@ -38,7 +38,8 @@ dojo.addOnLoad(function(){
 下面的一行对应数据库的是一条记录。目前记录这些值采用一个字段，存储的类型为向量(java.util.Vector).
 
 TODO:
-    在增加的时候可以支持拖拽(DND)。    
+    在增加的时候可以支持拖拽(DND)。 
+    对填入的数据进行客户端的验证.   
     </pre>
 </p>
 <div id="testMatrix" ></div>
