--- a/src/main/webapp/many2many2/BAList.html
+++ b/src/main/webapp/many2many2/BAList.html
@@ -13,7 +13,7 @@
 		  </tr>
 		  <tr jwcid="@contrib:TableRows" elment="tr" row="ognl:entity" converter="ognl:converter">
 		  	<th align="center"><span jwcid="@Insert" value="ognl:entity.name" /></th>
-			<td align="center"><span jwcid="@Insert" value="ognl:entity.a.cnName" /></td>
+			<td align="center"><span jwcid="@Insert" value="ognl:entity.message" /></td>
 			<td align="center"><a href="#" jwcid="@DirectLink" listener="listener:doEditEntityAction" parameters="ognl:entity">Edit</a></td>
 			<td align="center"><a href="#" jwcid="@DirectLink" listener="listener:doDeleteEntityAction" parameters="ognl:entity">Delete</a></td>
 		  </tr>
