初步完成了CornerTextArea组件的静态脚本
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1820 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_CornerTextArea.html
+++ b/src/test/resources/corner/widget/test_CornerTextArea.html
@@ -18,7 +18,7 @@ djConfig = { isDebug: true
 	dojo.require("dojo.widget.Select");
 	
 function init(){	
-	var props = {dataUrl:"CornerTextAreaBox.js",dataProviderClass:"corner.widget.ComboBoxDataProvider"};
+	var props = {dataUrl:"CornerTextAreaBox.js"};
 	dojo.widget.createWidget("CornerTextArea",props,dojo.byId("tab"));
 }
 dojo.addOnLoad(init);
