--- a/src/test/resources/corner/widget/test_TextArea.html
+++ b/src/test/resources/corner/widget/test_TextArea.html
@@ -14,12 +14,12 @@ djConfig = { isDebug: true
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/dojo/dojo.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 <script type="text/javascript">
-	dojo.require("corner.widget.CornerTextArea");
+	dojo.require("corner.widget.TextArea");
 	dojo.require("dojo.widget.Select");
 	
 function init(){	
-	var props = {dataUrl:"CornerTextAreaBox.js"};
-	dojo.widget.createWidget("CornerTextArea",props,dojo.byId("tab"));
+	var props = {dataUrl:"TextAreaBox.js"};
+	dojo.widget.createWidget("TextArea",props,dojo.byId("tab"));
 }
 dojo.addOnLoad(init);
 
