--- a/src/main/webapp/many2many2/BAForm.html
+++ b/src/main/webapp/many2many2/BAForm.html
@@ -76,7 +76,15 @@
           </td>
         </tr>
 		<tr>
-		  <td colspan="4" align="center">
+		  <td colspan="2">
+		  	another message
+		  </td>
+          <td align="center" class="right-td-width" colspan="2">
+            <input class="input-form-ajax" jwcid="anothermessageField" id="anothermessage" name="anothermessage"/>
+          </td>
+		</tr>
+		<tr>
+		  <td colspan="6" align="center">
 			  <input jwcid="@Submit" type="Submit" value="message:button.Okay"/>
 			  <input jwcid="@Any" type="Button" value="message:button.Cancle" onClick="javascript:tapestry.form.cancel(this.form);"/>		  
 		  </td>
